# legal-reasoning

./: .gitignore  barexam_GRPO_trl.py  convert_to_data.py  eval_bar_exam.py  generate_reasoning_traces_barexam.py  generate_reasoning_traces_tax.py  grpo.sh  grpo_barexam_trl.py  plot.sh  plot_pass_at_k.py  prompts.py  pyproject.toml  reformat_generated_texts.py  score_reasoning_traces_barexam.py  score_reasoning_traces_tax.py  update_solution.py
LLaMA-Factory/data/: dataset_info.json
LLaMA-Factory/examples/train_full/: qwen25_full_sft_14b.yaml  qwen25_full_sft_7b.yaml  qwen25_lora_sft.yaml
