[project]
name = "legal-reasoning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "flash-attn>=2.7.4.post1",
    "litellm>=1.61.1",
    "matplotlib>=3.10.0",
    "openai>=1.61.1",
    "seaborn>=0.13.2",
    "trl>=0.14.0",
    "unsloth>=2025.2.5",
    "vllm>=0.7.2",
    "wandb>=0.19.6",
]
